@@ -3203,6 +3203,16 @@ if [ -n "$USE_GETTEXT" ] ; then
     echotab "if test -d locale; then \$(RMRF) locale; fi"
     echotab "mkdir locale"
     echotab "(cd po && \$(MAKE) && \$(MAKE) install datarootdir=.. localedir='\$\$(datarootdir)/locale' INSTALL_DATA='\$(LN_HARD)') || (\$(RMRF) locale ; exit 1)"
+    case "$host_os" in
+      solaris*)
+        # The non-GNU dgettext() function in Solaris libc needs symbolic links.
+        # For the list of locale names, see spvw_language:init_language().
+        for localename in en_US de_DE fr_FR es_ES nl_NL ru_RU da_DK sv_SE; do
+          ll=`echo "${localename}" | sed -e 's/_.*//'`
+          echotab "test -d 'locale/${localename}.UTF-8/LC_MESSAGES' || ln -s '${ll}' 'locale/${localename}.UTF-8'"
+        done
+        ;;
+    esac
   else
     echotab "mkdir locale"
     if test -f ${SRCDIR}po/LINGUAS; then
@@ -4104,8 +4114,19 @@ if [ $CROSS = false ] ; then
     echotab "mkdir -p \$(DESTDIR)\$(lisplibdir)/base"
     echotab "mkdir -p \$(DESTDIR)\$(lisplibdir)/full"
     echotab "mkdir -p \$(DESTDIR)\$(bindir)"
-    test -n "$USE_GETTEXT" && \
+    if test -n "$USE_GETTEXT"; then
       echotab "cd po && \$(MAKE) installdirs DESTDIR='\$(DESTDIR)' prefix='\$(prefix)' exec_prefix='\$(exec_prefix)'"
+      case "$host_os" in
+        solaris*)
+          # The non-GNU dgettext() function in Solaris libc needs symbolic links.
+          # For the list of locale names, see spvw_language:init_language().
+          for localename in en_US de_DE fr_FR es_ES nl_NL ru_RU da_DK sv_SE; do
+            ll=`echo "${localename}" | sed -e 's/_.*//'`
+            echotab "test -d '\$(DESTDIR)\$(prefix)/locale/${localename}.UTF-8/LC_MESSAGES' || ln -s '${ll}' '\$(DESTDIR)\$(prefix)/locale/${localename}.UTF-8'"
+          done
+          ;;
+      esac
+    fi
     echotab "mkdir -p \$(DESTDIR)\$(datarootdir)"
     echotab "mkdir -p \$(DESTDIR)\$(elispdir)"
     echotab "mkdir -p \$(DESTDIR)\$(vimdir)"
@@ -4166,8 +4187,19 @@ if [ $CROSS = false ] ; then
     # Don't strip the executables, otherwise (disassemble #'cons)
     # and saveinitmem/:executable won't work.
     # echotab "strip \$(DESTDIR)\$(lisplibdir)/base/lisp${LEXE}"
-    test -n "$USE_GETTEXT" && \
+    if test -n "$USE_GETTEXT"; then
       echotab "cd po && \$(MAKE) install DESTDIR='\$(DESTDIR)' prefix='\$(prefix)' exec_prefix='\$(exec_prefix)'"
+      case "$host_os" in
+        solaris*)
+          # The non-GNU dgettext() function in Solaris libc needs symbolic links.
+          # For the list of locale names, see spvw_language:init_language().
+          for localename in en_US de_DE fr_FR es_ES nl_NL ru_RU da_DK sv_SE; do
+            ll=`echo "${localename}" | sed -e 's/_.*//'`
+            echotab "test -d '\$(DESTDIR)\$(prefix)/locale/${localename}.UTF-8/LC_MESSAGES' || ln -s '${ll}' '\$(DESTDIR)\$(prefix)/locale/${localename}.UTF-8'"
+          done
+          ;;
+      esac
+    fi
     echotab "\$(CC) \$(CPPFLAGS) \$(CFLAGS) \$(CLFLAGS)${DRIVERFLAGS} -DLISPLIBDIR='\"\$(lisplibdir)\"' -DLOCALEDIR='\"\$(localedir)\"' clisp.c ${GLLIB_A} -o \$(DESTDIR)\$(bindir)/clisp"
     echotab "mkdir -p \$(DESTDIR)\$(elispdir)"
     for f in ${EMACS_FILES}; do
